--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,25 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script>
+        //设置屏幕适配
+        function htRem(){
+          let htmlWidth=document.documentElement.clientWidth || document.body.clientWidth;
+          let htmlDom=document.getElementsByTagName('html')[0];
+          if(htmlWidth>750){
+            htmlWidth=750
+          }
+          
+          htmlDom.style.fontSize=htmlWidth/7.5+"px"
+        }
+        htRem();
+
+        window.onresize = function() {
+
+          htRem();
+
+        };
+    </script>
   </head>
   <body>
     <noscript>
